--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure-rest/ai-inference": "^1.0.0-beta.6",
     "@azure/core-auth": "^1.9.0",
     "next": "15.3.5",
+    "openai": "^5.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
