--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "openai": "^5.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-resizable": "^3.0.5",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
